--- a/Shaking/AndroidManifest.xml
+++ b/Shaking/AndroidManifest.xml
@@ -22,7 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+    		<activity android:name="com.nptu.dse.shaking.activity.SelectActivity"/>
         <receiver android:name="com.nptu.dse.shaking.alarm.AlarmReceiver"/>
+    
+    
     </application>
 
      
