--- a/Shaking/bin/AndroidManifest.xml
+++ b/Shaking/bin/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:name="com.nptu.dse.shaking.main.ShakingApp">
         <activity
             android:name="com.nptu.dse.shaking.main.MainActivity"
             android:label="@string/app_name" >
@@ -22,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    		<activity android:name="com.nptu.dse.shaking.activity.SelectActivity"/>
+    		<activity android:name="com.nptu.dse.shaking.activity.SelectSportActivity"/>
         <receiver android:name="com.nptu.dse.shaking.alarm.AlarmReceiver"/>
     
     
