--- a/Shaking/AndroidManifest.xml
+++ b/Shaking/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.shaking"
+    package="com.nptu.dse.shaking"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -13,9 +13,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" 
-        android:name="com.nptu.dse.shaking.main.ShakingApp">
+        android:name=".main.ShakingApp">
         <activity
-            android:name="com.nptu.dse.shaking.main.MainActivity"
+            android:name=".main.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    		<activity android:name="com.nptu.dse.shaking.activity.SelectSportActivity"/>
-        <receiver android:name="com.nptu.dse.shaking.alarm.AlarmReceiver">
+    		<activity android:name=".activity.SelectSportActivity"/>
+        <receiver android:name=".alarm.AlarmReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
