--- a/Shaking/bin/AndroidManifest.xml
+++ b/Shaking/bin/AndroidManifest.xml
@@ -29,7 +29,8 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-    
+    <activity android:name=".activity.DialogActivity"
+        		  android:theme="@style/smsDialog"/>
     
     </application>
 
