--- a/Shaking/AndroidManifest.xml
+++ b/Shaking/AndroidManifest.xml
@@ -39,7 +39,7 @@
 
         <activity
             android:name=".activity.DialogActivity"
-            android:theme="@style/smsDialog" />
+            android:theme="@style/DialogTheme" />
         <activity android:name=".activity.HandSportActivity" />
         <activity android:name=".activity.LegSportActivity" />
         <activity android:name=".activity.BodySportActivity" />
