--- a/Shaking/AndroidManifest.xml
+++ b/Shaking/AndroidManifest.xml
@@ -10,6 +10,8 @@
 
     <uses-permission android:name="android.permission.GET_TASKS" />
 	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+	
 	
     <application
         android:name=".main.ShakingApp"
